--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "pybass_new",
+  "name": "pybass_react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "lodash.template": "^4.5.0",
+    "raphael": "^2.2.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-raphael": "^0.9.0",
+    "react-scripts": "3.0.1",
+    "styled-jss": "^2.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,6 +32,6 @@
     ]
   },
   "devDependencies": {
-    "lodash": "^4.17.15"
+    "got-scales": "^1.0.12"
   }
 }
