--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "do": "sh orsinir@www.pybass.com 'cd pybass && git pull && npm run build'"
   },
   "eslintConfig": {
     "extends": "react-app"
