--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "do": "sh orsinir@www.pybass.com 'cd pybass && git pull && npm run build'"
+    "do": "ssh orsinir@www.pybass.com 'cd pybass && git pull && npm run build'"
   },
   "eslintConfig": {
     "extends": "react-app"
