removed deploy test

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "do": "ssh orsinir@www.pybass.com 'cd pybass && git pull && npm run build'"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
